fixed login white space

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 }
 
 body {
+  width: 100% !important;
   display: flex;
   place-items: center;
   justify-content: center;
