--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -12,7 +12,7 @@
 
 .custom-login::before {
     content: '';
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 50%;
